modified:   app/src/main/kotlin/com/metrolist/music/playback/MusicService.kt 	modified:   app/src/main/kotlin/com/metrolist/music/playback/PlayerConnection.kt 	modified:   app/src/main/kotlin/com/metrolist/music/ui/player/Player.kt 	modified:   app/src/main/kotlin/com/metrolist/music/ui/player/Thumbnail.kt 	modified:   app/src/main/kotlin/com/metrolist/music/utils/YTPlayerUtils.kt 	modified:   app/src/main/res/values/metrolist_strings.xml

--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -14,6 +14,7 @@
     <string name="retry_button">Retry</string>
     <string name="album_cover_desc">Album cover</string>
     <string name="top_music_videos">Top music videos</string>
+    <string name="music_video">Music Video</string>
     <string name="trending">Trending</string>
     <string name="top_result">Top result</string>
     <string name="other_results">Other</string>
